Fixed viewport issues on mobile devices in the calendar

--- a/src/app/reservation/reservation-list/reservation-list.component.css
+++ b/src/app/reservation/reservation-list/reservation-list.component.css
@@ -2,17 +2,16 @@
   width: 100%;
   height: 100%;
 }
-.info {
-  height: 15%;
+#info {
+  height: 8%;
+  min-height: 4rem;
   width: 100%;
-}
-.week {
   padding-top: 2.5%;
   text-align: center;
 }
 #calendar {
   width: 85%;
-  max-width: 70.4rem;
+  max-width: 71rem;
   height: 75vh;
   margin: auto;
   overflow: auto;
@@ -25,11 +24,12 @@ div.days {
   border-right: 1px solid lightgray;
   display: flex;
   flex-direction: column;
-  flex: 0 0 10rem;
+  min-width: 10rem;
+  flex: 1;
   text-align: center;
 }
 div.day-header {
-  height: 12%;
+  height: 5rem;
   padding: 10px;
   border-bottom: 1px solid lightgray;
 }
